sumo/tests/dfrouter/errors/detector_files/broken_detectors_file1h/errors.dfrouter
Error: A detector without a lane position occured within 'input_messstrecke.det.xml' (detector id='MQ11Fs2').
Quitting (on error).
